# tap-btg

./: README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml
tap_btg/: __init__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
